--- a/css/index.css
+++ b/css/index.css
@@ -44,3 +44,12 @@
 .novalid-input{
     border-color: #dc3545;
 }
+
+.panel1{
+    width: 2%;
+    float: left;
+    margin-top: 3%;
+}
+.panel2{
+    width: 98%;
+}
